test-reporter/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-reporter
  labels:
    app.kubernetes.io/part-of: test-reporter
